new upstream release

--- a/skins/litecube-f/chbox.css
+++ b/skins/litecube-f/chbox.css
@@ -5,6 +5,13 @@
   text-align: center;
 }
 
+#messagelist tr td.chbox
+{
+  width: 20px;
+  padding: 0px 2px 1px 2px;
+  text-align: center;
+}
+
 #selectmenu ul
 {
   margin: 0px;
@@ -16,10 +23,9 @@
   margin-left: -40px;
   li-style-type: none;
   display: block;
-  color: white;
 }
 
 #selectmenu ul li:hover
 {
-   background-color: #0186ba;
+   background-color: #C2E2F9;
 }
